k8s/backend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatbot-backend
  namespace: cw-chat
spec:
  selector:
    app: chatbot-backend
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
