k8s/redis-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-stack
  namespace: cw-chat
spec:
  selector:
    app: redis-stack
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
    - name: ui
      port: 8001
      targetPort: 8001
  type: ClusterIP
