k8s/ingress-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chatbot-ingress-frontend
  namespace: cw-chat
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: chatbot.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chatbot-frontend
                port:
                  number: 80
